# librarian

./: .bash_dpa  .codecov.yml  .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .vimrc  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  add_obs_librarian.py  add_observations.py  alembic.ini  conftest.py  copier  copier.php  copy_maker  copy_maker.php  copy_master  copy_master.php  db_init  db_init.php  db_util.inc  docker-compose.yml  hera_librarian.py  hera_mc.py  hera_rpc.py  hera_util.inc  hl.php  hl_client.cfg.sample  hl_constraints.sql  hl_db.inc  hl_rpc_client.php  hl_rpc_handler.php  hl_schema.sql  (+21 more)
.circleci/: config.yml
.github/workflows/: black.yml  pytest.yml  release.yml
alembic/: backport_instances.sql  env.py  script.py.mako
alembic/versions/: 0e0e6d02a01a_add_index_on_fileevent_name.py  1def8c988372_add_librarian_transfer_toggling.py  42f29c26ab0f_enable_background_async_tasks.py  464899566429_make_file_obsids_optional.py  71df5b41ae41_initial_schema.py  82ea9906e7d4_add_incoming_transfer_table.py  b02eb31402b1_add_index_on_fileinstance_name.py  baf3ead3d88b_refactor_stores.py  bc996bc8dc1c_add_fileinstance_deletion_policy.py  d8934c52bac5_enable_sneakernet_transfers.py  fa863eafacb0_update_observation_table.py
alembic/versions_1.0/: 0e0e6d02a01a_add_index_on_fileevent_name.py  464899566429_make_file_obsids_optional.py  71df5b41ae41_initial_schema.py  82ea9906e7d4_add_incoming_transfer_table.py  b02eb31402b1_add_index_on_fileinstance_name.py  baf3ead3d88b_refactor_stores.py  bc996bc8dc1c_add_fileinstance_deletion_policy.py  fa863eafacb0_update_observation_table.py
ci/: hl_client.cfg  install-circle.sh  librarian_server_conda_env.yml  librarian_tests.yml  server-config-ci.json  server-config-docker.json  start.sh
container/: Dockerfile  README.md  app_start.sh  server-config-docker.json  ssh_config  store_start.sh  wait-for-it.sh
container/postgres/: .gitignore  Dockerfile  README.md  background_config.json  docker-compose.yml  pre_docker_setup.sh  server_config.json  setup_vars.sh
container/sqlite/: Dockerfile  README.md  background_config.json  docker-compose.yml  librarian_env  pre_docker_setup.sh  server_config.json
docs/: Accessing.md  Administration.md  Background.rst  Client.rst  Connections.rst  Deployment.rst  Globus.md  Index.md  Index.rst  Ingesting.md  Overview.md  Provisioning.rst  Searching.md  Sneaker.rst  Staging.md  Stores.rst  Uploading.rst  server-config.sample.json
docs/source/: Background.rst  Client.rst  Connections.rst  Deployment.rst  Globus.rst  Index.rst  Observability.rst  Provisioning.rst  Sneaker.rst  Stores.rst  Troubleshooting.rst  Uploading.rst  Validation.rst  conf.py  index.rst
hera_librarian/: __init__.py  authlevel.py  base_store.py  cli.py  client.py  deletion.py  errors.py  exceptions.py  hera_librarian.py  queues.py  settings.py  store.py  transfer.py  uploader.py  utils.py
hera_librarian/async_transfers/: __init__.py  core.py  globus.py  local.py  rsync.py
hera_librarian/models/: __init__.py  admin.py  checkin.py  clone.py  errors.py  instances.py  ping.py  search.py  stores.py  uploads.py  users.py  validate.py
hera_librarian/stores/: __init__.py  core.py  local.py  pathinfo.py
hera_librarian/tests/: __init__.py  test_base_store.py  test_cli.py  test_store.py  test_utils.py
hera_librarian/transfers/: __init__.py  core.py  local.py
integrationtest/: README.md  conftest.py  mock_config.json  test_configuration.py  test_upload.py  test_upload_file.py
librarian_background/: __init__.py  bad.py  check_clone.py  check_integrity.py  core.py  create_clone.py  hypervisor.py  poll.py  queues.py  recieve_clone.py  rolling_deletion.py  send_clone.py  settings.py  task.py
librarian_packages/hera_librarian/: MANIFEST.in  setup.py
librarian_packages/server/: MANIFEST.in  hera_librarian  requirements.txt  setup.py
librarian_server/: README.md  __init__.py  authlevel.py  bgtasks.py  database.py  dbutil.py  deletion.py  encryption.py  file.py  logger.py  mc_integration.py  misc.py  observation.py  search.py  settings.py  store.py  storemetadata.py  webutil.py
librarian_server/api/: __init__.py  admin.py  auth.py  checkin.py  clone.py  ping.py  (+7 more)
librarian_server_scripts/: librarian_background_only.py  librarian_change_transfer_status.py  librarian_server_rebuild_database.py  librarian_server_repair_database.py  librarian_server_setup.py  librarian_server_start.py
old/: copy_master  db_util.inc  hera_util.inc  hl_rpc_handler.php  sources.php  test.py  test_copy.php  test_setup.inc
scripts/: add_librarian_file_event.py  add_obs_librarian.py  launch_librarian_copy.py  librarian  librarian-background-only  librarian-server-start  librarian_assign_sessions.py  librarian_delete_files.py  librarian_initiate_offload.py  librarian_locate_file.py  librarian_offload_helper.py  librarian_search_files.py  librarian_set_file_deletion_policy.py  librarian_stage_files.py  runserver.py  upload_to_librarian.py
server/: .gitignore  README.md  alembic.ini  hera_librarian  initdb.py  plotly_librarian_upload_speed.py  plotly_librarian_upload_speed.sh  runserver.py  server-config.sample.json  server.py
tests/: conftest.py  mock_config.json  server.py
(+132 files in other folders)
