[build-system]
requires = ["setuptools>=64.0.0"]

[tool.setuptools.packages.find]
exclude=["*tests*"]
include=["hera_librarian", "librarian_server", "librarian_background", "librarian_server_scripts"]

[project]
name="hera_librarian"
requires-python = ">=3.10"
version = "2.0.0a"
dependencies = [
    "alembic",
    "astropy",
    "fastapi",
    "sqlalchemy",
    "httpx",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "requests",
    "schedule",
    "checksumdir",
]
authors = [
    {name = "HERA Team", email = "hera@lists.berkeley.edu"},
    {name = "Simons Observatory"},
    {name = "Peter Williams"},
    {name = "Paul La Plante"},
    {name = "Josh Borrow"},
]
maintainers = [
    {name = "Simons Observatory"},
    {name = "Josh Borrow", email = "borrowj@sas.upenn.edu"},
    {name = "Paul La Plante"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
description="The client and server for the Simons Observatory librarian"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-xprocess",
]

[project.scripts]
librarian-server-start = "librarian_server_scripts.librarian_server_start:main"
librarian-background-only = "librarian_server_scripts.librarian_background_only:main"
librarian = "hera_librarian.cli:main"

[project.urls]
Homepage = "https://github.com/simonsobs/librarian"
Legacy = "https://github.com/HERA-Team/librarian/"

[tool.pytest.ini_options]
testpaths = [
    "tests/integration_test",
    "tests/server_unit_test",
    "tests/background_unit_test",
]

[tool.coverage.run]
source = [
    "librarian_server",
    "librarian_background",
    "hera_librarian",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

