[build-system]
requires = ["setuptools>=64.0.0"]

[tool.setuptools.packages.find]
exclude=["*tests*"]

[project]
name="hera_librarian"
requires-python = ">=3.10"
version = "2.5.1"
dependencies = [
    "alembic",
    "argon2-cffi",
    "xxhash >= 0.8.0",
    "cryptography",
    "fastapi >= 0.108.0",
    "globus-sdk <= 3.40.0",
    "httpx",
    "pydantic >= 2",
    "pydantic-settings >= 2",
    "python-dateutil",
    "pyyaml",
    "requests >= 2.27.0",
    "schedule >= 1.2.1",
    "sqlalchemy >= 2",
    "sysrsync == 1.1.1",
    "uvicorn",
    "asyncer==0.0.8"
]
authors = [
    {name = "Josh Borrow"},
    {name = "Simons Observatory"},
    {name = "Paul La Plante"},
    {name = "HERA Team", email = "hera@lists.berkeley.edu"},
    {name = "Peter Williams"},
]
maintainers = [
    {name = "Simons Observatory"},
    {name = "Josh Borrow", email = "borrowj@sas.upenn.edu"},
    {name = "Paul La Plante"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
description="The client and server for the Simons Observatory librarian"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-xprocess",
]
postgres = [
    "psycopg[binary,pool]",
]

[project.scripts]
librarian-server-start = "librarian_server_scripts.librarian_server_start:main"
librarian-background-only = "librarian_server_scripts.librarian_background_only:main"
librarian-server-setup = "librarian_server_scripts.librarian_server_setup:main"
librarian = "hera_librarian.cli:main"
librarian-server-rebuild-database = "librarian_server_scripts.librarian_server_rebuild_database:main"
librarian-server-repair-database = "librarian_server_scripts.librarian_server_repair_database:main"

[project.urls]
Homepage = "https://github.com/simonsobs/librarian"
Legacy = "https://github.com/HERA-Team/librarian/"

[tool.pytest.ini_options]
testpaths = [
    "tests/server_unit_test",
    "tests/background_unit_test",
    "tests/client_unit_test",
    "tests/integration_test",
]

[tool.coverage.run]
source = [
    "librarian_server",
    "librarian_background",
    "hera_librarian",
    "librarian_server_scripts"
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
exclude_also = ["if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
skip = ["docs", ".github", ".vscode", "container", "env", "env311", "build"]

[tool.black]
exclude = "docs|.github|.vscode|container|env|env311|build"
